Created Component Framework.

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,10 +1,10 @@
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>You're in AppComponent.<!DOCTYPE html></title>
-  </head>
-  <body>
-    <h3>You're in AppComponent.HTML!!!</h3>
-
-  </body>
-</html>
+<app-header></app-header>
+<div class="container">
+   <div class="row">
+     <div class=".col-md-12">
+       <h3>You're in AppComponent.HTML!!!</h3>
+       <app-recipes></app-recipes>
+       <app-shopping-list></app-shopping-list>
+     </div>
+   </div>
+ </div>
